packages/typ/tests/fixtures/diagnostics/0995_mli_module_path_unary_overapplied_09.mli.expected
File "0995_mli_module_path_unary_overapplied_09.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0995_mli_module_path_unary_overapplied_09 is not a valid module name.

File "0995_mli_module_path_unary_overapplied_09.mli", line 5, characters 13-33:
5 | val x_iota : (int, bool) M_iota.t
                 ^^^^^^^^^^^^^^^^^^^^
Error: The type constructor M_iota.t expects 1 argument(s),
       but is here applied to 2 argument(s)
